fix login box Z-index for Chrome

--- a/css/_loginBox.scss
+++ b/css/_loginBox.scss
@@ -4,7 +4,7 @@
   z-index: -1;
   opacity: 0;
   &.show{
-    z-index: 1;
+    z-index: 10;
     opacity: 1;
     .modal-content{
       opacity: 1;
